--- a/TicketManagement.Web/Components/Layout/NavMenu.razor
+++ b/TicketManagement.Web/Components/Layout/NavMenu.razor
@@ -21,6 +21,12 @@
         </div>
 
         <div class="nav-item px-3">
+            <NavLink class="nav-link" href="organizations">
+                <span class="bi bi-building" aria-hidden="true"></span> Organizations
+            </NavLink>
+        </div>
+
+        <div class="nav-item px-3">
             <NavLink class="nav-link" href="projects">
                 <span class="bi bi-folder-fill" aria-hidden="true"></span> Projects
             </NavLink>
